--- a/page.html
+++ b/page.html
@@ -14,6 +14,7 @@
             <input type="file" id="image-input" accept=".png">            
         </form>
         <p id="happy"></p>
+        <p id="circle"></p>
         <p id="size"></p>
         <div style="display: none" id="btn-container">
             <button id="fill-btn" onclick="scaleDownBtn()">Scale Down</button>
